# vdot

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  simple.py  styles.css  vdot.py
misc/: basics.ipynb  generate.py
notebooks/: 1-basics.ipynb  2-analysis.ipynb
