[project]
name = "vdot"
version = "0.1.0"
description = "VDOT calculator TUI app"
authors = [
  { name = "Tiago Seabra", email = "tlgs@users.noreply.github.com" },
]
classifiers = [
  "License :: OSI Approved :: Zero-Clause BSD (0BSD)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "textual~=0.29.0",
]
scripts = { vdot = "vdot:main" }

[project.optional-dependencies]
dev = [
  "jupyter",
  "pandas",
  "pre-commit",
  "scipy",
  "seaborn",
]


[tool.hatch]
version.path = "vdot.py"
build.targets.wheel.only-include = ["vdot.py"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
